// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`comments comment node with backslash at top level 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = \\"\\") {
    return comment(\` \\\\\\\\ \`);
  }
}"
`;

exports[`comments comment node with backtick at top-level 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = \\"\\") {
    return comment(\` \\\\\` \`);
  }
}"
`;

exports[`comments comment node with interpolation sigil at top level 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = \\"\\") {
    return comment(\` \\\\\${very cool} \`);
  }
}"
`;

exports[`comments only a comment 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  return function template(ctx, node, key = \\"\\") {
    return comment(\` comment\`);
  }
}"
`;

exports[`comments properly handle comments 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div>hello <!-- comment-->owl</div>\`);
  
  return function template(ctx, node, key = \\"\\") {
    return block1();
  }
}"
`;

exports[`comments properly handle comments between t-if/t-else 1`] = `
"function anonymous(app, bdom, helpers
) {
  let { text, createBlock, list, multi, html, toggler, comment } = bdom;
  
  let block1 = createBlock(\`<div><block-child-0/><block-child-1/></div>\`);
  let block2 = createBlock(\`<span>true</span>\`);
  let block3 = createBlock(\`<span>owl</span>\`);
  
  return function template(ctx, node, key = \\"\\") {
    let b2, b3;
    if (true) {
      b2 = block2();
    } else {
      b3 = block3();
    }
    return block1([], [b2, b3]);
  }
}"
`;
